Date	Added
11/29
        * Added more sc_data checks in skill.c and pc.c [celest]
        * Updated Quagmire, Enchant Deadly Poison, Fog Wall [celest]

11/28
	* Fixed a crash in login_sql/login.c [MouseJstr]
	* made common/socket.c more crash resistant [MouseJstr]
	* Added flush_fifos to socket.c so that we can make sure everything
	  has been sent before we shut the process down [MouseJstr]
	* Modified src/char_sql/char.c to flush fifos on exit [MouseJstr]
	* Fixed a crash in src/map/map.c shutdown where it would
	  use the char_fd session after it was alrady cleaned up [MouseJstr]
	* removed conf-templ/atcommand_athena.conf.orig [MouseJstr]
	* removed a USE from sql-files/main.sql that should not be there [MouseJstr]
	* Changed MSG_INFO color to bright white, since bright blue want so bright... [MC Cameri]
	* Made Map Removed: %d string be displayed only if there were maps removed. [MC Cameri]
	* Fixed online system for char not sending players left "online" to login when restarting [Wizputer]
	* Fixed damage formula of Cart revolution: 150% +1% per 80ea [Lupus]
	* Removed 2x Chance of Equipment Breaking during CRITICAL attacks [Lupus]
	* Fix some file props [MouseJstr]
	* Added map_versionscreen(), displayed when --version flag is passed on command-line. [MC Cameri]
	* Finished map_helpscreen(), displayed when --help flag passed on command-line. [MC Cameri]
	* Changed Guilds Extention Skill to +6 people per level. [Lupus]
	  (tested it for 2 weeks! or a big server)
	* Added a fix for gettimeofday() for WIN32 [Codemaster]
        * skill Updates:
          - Updated Slow Poison, modified checks for skill_unit_onplace abit. [celest]
          - Updated Finger Offensive, thanks to orn  [celest]
        * Updated packet_ver_flag's default value, thanks to iscandium  [celest]
        * Added warning if motd.txt was not found  [celest]
          (Turn on error_log in battle_athena.conf to enable it)

11/27
	* Fixed a few map crashes when char-server crashes [Wizputer]