@@ -1,0 +1,1 @@
+Last Fix: Added more sc_data checks in skill.c and pc.c [celest]
